2008-11-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/speller.c, src/speller.h, src/gui.c:
   When using 'Ignore All', add the word to ignore to the enchant
   session list to really ignore it for further checks, too.


2008-11-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/speller.c, src/speller.h, src/gui.c:
   Check the Scintilla lexing style for the word to check and
   skip any further checks if the word is not a comment, string
   or has any other style which belongs to the filetype language of
   the current document. This makes the whole plugin much more useful,
   eliminates many false positives and increases speed a lot.


2008-10-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/speller.c, src/speller.h, src/scplugin.c:
   Improve the auto-detection of the user's language (handle locales
   like 'de_DE.UTF-8' correctly).
 * src/gui.c:
   Add 'Ignore All' menu item to the suggestions menu.
 * New release: Spell Check 0.2.


2008-10-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/speller.c:
   Add some error checking and prevent crashes if Enchant doesn't
   provide any dictionaries.
   Plug a little memory leak.
   If showing suggestions in the messages window is disabled, don't
   check for suggestions at all, this heavily reduces the time needed
   for a full document check.
 * src/gui.c:
   Ignore numbers when updating the editor menu.
   Rename the editor menu item to 'Spelling Suggestions'.
   When adding words to the dictionary, remove all indicators on
   these words.
 * src/gui.c, src/gui.h, src/scplugin.c:
   Add keybinding to toggle the 'Check while typing' setting.


2008-10-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/spellcheck.c, src/scplugin.c, src/gui.c, src/speller.c,
   src/scplugin.h, src/gui.h, src/speller.h, src/Makefile.am,
   po/POTFILES.in:
   Split spellcheck.c into three source files.
 * README: