@@ -1,3 +1,12 @@
+2008-11-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/speller.c, src/speller.h, src/gui.c:
+   When replacing a misspelled word with a suggestion, add this
+   replacement to the spell checker to remember it in further checks.
+ * src/gui.c, src/scplugin.c, src/speller.c, src/gui.h, src/scplugin.h:
+   Move SpellClickInfo struct into gui.c.
+
+
 2008-11-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/speller.c, src/speller.h, src/gui.c:
